[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
build = "build.rs"
name = "spki-sexp"
version = "0.0.1"

[build-dependencies]
env_logger = "0.3.5"
log = "*"
serde_codegen = "0.8"
tempfile = "2.1.4"

[dependencies]
dtoa = "0.2.2"
error-chain = "0.5.0"
itoa = "0.1.1"
log = "0.3.6"
quick-error = "1.0.0"
serde = "0.8.0"

[dev-dependencies]
env_logger = "0.3.5"
quickcheck = "0.3.1"

[[test]]
name = "lib"
